--- a/projects/carey-auth/package.json
+++ b/projects/carey-auth/package.json
@@ -1,12 +1,13 @@
 {
   "name": "carey-auth",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "peerDependencies": {
     "@angular/common": "^11.0.9",
     "@angular/core": "^11.0.9",
     "carey-user": "0.0.4",
     "@angular/flex-layout": "^11.0.0-beta.33",
-    "@angular/material": "^11.2.10"
+    "@angular/material": "^11.2.10",
+    "carey-alert": "0.0.1"
   },
   "dependencies": {
     "tslib": "^2.0.0"
