--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
+    "carey-alert": "0.0.1",
     "carey-user": "0.0.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
