--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
     "carey-alert": "0.0.1",
+    "carey-url-util": "0.0.1",
     "carey-user": "0.0.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
